--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<h1 class = "h1microDiv">Безопасность</h1>
 					</div>
 					<p>Доверие является нашей главной ценностью. Мы работаем не покладая рук, чтобы обеспечить всем клиентам высочайший уровень защиты данных, конфиденциальности и контроля.</p>
-					<a href = "https://www.google.com/">Узнать больше</a>
+					<a href = "main.html">Узнать больше</a>
 				</div>
 				<div class="miniDiv">
 					<div class = "microDiv">
